fixed button overflow

--- a/main.css
+++ b/main.css
@@ -28,4 +28,7 @@ body {
   background-color: #C83803;
   width:100%;
   padding: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
